# BulletSynthesis

./: .gitignore  .gitmodules  BulletSynthesis.sln
BulletSynthesis/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BulletSynthesis.sln  BulletSynthesis.vcxproj  BulletSynthesis.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Example.cpp  Logger.h  NativeExport.cpp  Research.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_custom.bat  cmake_install.cmake  log.csv
BulletSynthesis/BulletSynthesis.dir/Debug/BulletSynthesis.tlog/: BulletSynthesis.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
BulletSynthesis/BulletSynthesis.dir/Release/: BulletSynthesis.dll.recipe
BulletSynthesis/BulletSynthesis.dir/Release/BulletSynthesis.tlog/: BulletSynthesis.lastbuildstate  BulletSynthesis.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
BulletSynthesis/Physics/: Entity.h  PhysicsManager.cpp  PhysicsManager.h
BulletSynthesis/lib/Debug/: BulletSynthesis.exp  BulletSynthesis.lib
BulletSynthesis/lib/Release/: BulletSynthesis.exp  BulletSynthesis.lib
BulletSynthesis/src/: NativeExport.cpp  PhysicsManager.cpp  PhysicsManager.h
BulletSynthesisSharp/: BulletSynthesisSharp.csproj  PhysicsHandler.cs  PhysicsManager.cs  PhysicsObject.cs
BulletSynthesisSharp/Bullet/Collision/: Shape.cs
BulletSynthesisSharp/Bullet/Constraints/: Constraint.cs
BulletTest/: BulletTest.vcxproj  Main.cpp
BulletTestSharp/: BulletTestSharp.csproj  Program.cs
BulletZombie/: .gitignore  Assembly-CSharp.csproj  BulletZombie.sln  Output.csv  ToVector3ArrayTest.txt
BulletZombie/Assets/Materials/: PointA.mat  PointB.mat
BulletZombie/Assets/Scenes/: SampleScene.unity
BulletZombie/Assets/Scripts/: BulletManager.cs  BulletPuppet.cs  BulletTest.cs  Util.cs
BulletZombie/ProjectSettings/: ProjectSettings.asset
CMakeStuff/: .gitignore  CMakeLists.txt  cmake_custom.bat
CMakeStuff/src/: NativeExport.cpp  PhysicsManager.cpp
proto/: build.sh  physics.proto
